--- a/styles.css
+++ b/styles.css
@@ -92,11 +92,11 @@ button:hover {
   filter: brightness(90%);
 }
 
-.logout {
+.logout, .delete-btn {
   background-color: #dc3545;
 }
 
-.logout:hover {
+.logout:hover, .delete-btn:hover {
   background-color: #c82333;
 }
 
@@ -146,13 +146,12 @@ a:hover {
   color: #333;
 }
 
+.file-list li strong {
+  margin-right: 0.5rem;
+}
+
 .delete-btn {
   width: auto;
   padding: 0.25rem 0.5rem;
   font-size: 0.9rem;
-  background-color: #dc3545;
 }
-
-.delete-btn:hover {
-  background-color: #c82333;
-  }
